fix: wrong margin in post

--- a/style.less
+++ b/style.less
@@ -598,9 +598,11 @@ article p {
 }
 div.PostMain > div.ArtMain > article {
     margin-top: 45px;
+    margin-bottom: 20px;
 }
 div.PostMain > div.ArtMain0 > article {
     margin-top: 15px;
+    margin-bottom: 20px;
 }
 .backGround {
     left: 15px;
@@ -2372,7 +2374,7 @@ article div.mdui-table-fluid {
 .mdx-post-money {
     width: 100%;
     text-align: center;
-    padding: 20px 0;
+    padding: 0 0 20px 0;
 }
 .mdx-post-money > button {
     width: 70px;
